# sigmaker-linux

./: CMakeLists.txt  LICENSE  README.md
IDA Pro SigMaker/: CMakeLists.txt  Main.cpp  Main.h  Plugin.cpp  Plugin.h  SignatureUtils.cpp  Utils.cpp  Utils.h  Version.h
